--- a/PackagingAndDeliveryMicroservice/src/main/resources/application.properties
+++ b/PackagingAndDeliveryMicroservice/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port=8083
-spring.application.name: PACKAGE_AND_DELIVERY
+spring.application.name: PACKAGE-AND-DELIVERY
 eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka
